--- a/ui/style.css
+++ b/ui/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: sans-serif;
-    background-color: lightgrey;
+    background-color: black;
     margin-top: 75px;
 }
 
@@ -10,6 +10,7 @@ body {
 
 .text-big {
     font-size: 300%;
+    color: white;
 }
 
 .bold {
