[imad-console] Updates ui/style.css

--- a/ui/style.css
+++ b/ui/style.css
@@ -27,3 +27,13 @@ body {
     height: 200px;
 }
 
+.container { 
+                    max-width: 800px;
+                    margin: 0 auto;
+                    color: #4a4444;
+                    font-family: sans-serif;
+                    padding-top: 40px;
+                    padding-left: 10px;
+                    padding-right: 10px;
+            }
+
